<resources>
    <string name="app_name">Registro de personas</string>
    <string name="id">ID</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="telefono">Telefono</string>
    <string name="direccion">Direccion</string>
    <string name="ocupacion">Ocupacion</string>
    <string name="correo">Correo</string>
    <string name="salario">Salario</string>
</resources>